modules/network/internet_gateway.tf
resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Terraform IGW"
  }
}
