modules/network/route_table.tf
resource "aws_route_table" "custom_rt" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main_igw.id
  }

  tags = {
    Name = "Terraform Custom RT"
  }
}

resource "aws_route_table_association" "public_rt_association" {
  for_each       = aws_subnet.public_subnets
  subnet_id      = each.value.id
  route_table_id = aws_route_table.custom_rt.id
}
